<resources>
    <string name="app_name">Covid-19</string>
    <string name="covid_19">Covid-19</string>
    <string name="statistics">Statistics</string>
    <string name="prevention">Prevention</string>
    <string name="treatment">Treatment</string>
    <string name="symptoms">Symptoms</string>
    <string name="pandemic">Pandemic</string>
    <string name="covid19">Covid-19</string>
    <string name="general_info">General Info</string>
    <string name="todo">TODO</string>
    <string name="virusicon">VirusIcon</string>
    <string name="title_activity_treatment">Treatment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>